--- a/Smartshop/MainWindow.xaml
+++ b/Smartshop/MainWindow.xaml
@@ -7,13 +7,13 @@
         xmlns:vm="clr-namespace:Smartshop.ViewModels"
         xmlns:v="clr-namespace:Smartshop.Views"
         mc:Ignorable="d"
-        Title="Smartshop 1.0.0.1" Height="800" Width="1400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Smartshop 1.0.0.1" Height="1000" Width="1400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <DataTemplate x:Name="loginViewTemplate" DataType="{x:Type vm:LoginViewModel}">
             <v:LoginView DataContext="{Binding}"/>
         </DataTemplate>
         <DataTemplate x:Name="CustomerViewTemplate" DataType="{x:Type vm:CustomerViewModel}">
-            <v:CustomersView DataContext="{Binding}"/>
+            <v:NewCustomerView DataContext="{Binding}"/>
         </DataTemplate>
     </Window.Resources>
     <DockPanel>
