--- a/Smartshop/Views/NewCustomerView.xaml
+++ b/Smartshop/Views/NewCustomerView.xaml
@@ -73,7 +73,7 @@
                        
                         <StackPanel Height="50" Grid.ColumnSpan="2"  Margin="2" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                            
-                            <TextBox x:Name="txtCompanyName" Text="{Binding Path=Customer.CompanyName}"  materialDesign:HintAssist.Hint="Company Name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="400"></TextBox>
+                            <TextBox x:Name="txtCompanyName" Text="{Binding Path=CompanyName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Company Name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="400"></TextBox>
                             <Image Source="\Assets\Images\defaultContact.png" Width="36" Height="36" Opacity=".4"/>
                         </StackPanel>
                     </Grid>
@@ -85,7 +85,7 @@
 
                         <StackPanel Height="50" Grid.ColumnSpan="2"  Margin="2" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
 
-                            <TextBox x:Name="txtContactName"  materialDesign:HintAssist.Hint="Contact Name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="400"></TextBox>
+                            <TextBox x:Name="txtContactName" Text="{Binding Path=ContactName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Contact Name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="400"></TextBox>
                             <Image Source="\Assets\Images\defaultContact.png" Width="36" Height="36" Opacity=".4"/>
                         </StackPanel>
                     </Grid>
@@ -97,7 +97,7 @@
 
                         <StackPanel Height="50" Grid.ColumnSpan="2"  Margin="2" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
 
-                            <TextBox x:Name="txtEmail" materialDesign:HintAssist.Hint="Email" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="400"></TextBox>
+                            <TextBox x:Name="txtEmail" Text="{Binding Path=Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Email" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="400"></TextBox>
                             <Image Source="\Assets\Images\defaultContact.png" Width="36" Height="36" Opacity=".4"/>
                         </StackPanel>
                     </Grid>
@@ -109,7 +109,7 @@
 
                         <StackPanel Height="50" Grid.ColumnSpan="2"  Margin="2" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
 
-                            <TextBox x:Name="txtPhone" materialDesign:HintAssist.Hint="Phone #" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="400"></TextBox>
+                            <TextBox x:Name="txtPhone" Text="{Binding Path=Phone, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Phone #" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="400"></TextBox>
                             <Image Source="\Assets\Images\defaultContact.png" Width="36" Height="36" Opacity=".4"/>
                         </StackPanel>
                     </Grid>
@@ -121,7 +121,7 @@
 
                         <StackPanel Height="50" Grid.ColumnSpan="2"  Margin="2" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
 
-                            <TextBox x:Name="txtAddress" materialDesign:HintAssist.Hint="Address" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="400"></TextBox>
+                            <TextBox x:Name="txtAddress" Text="{Binding Path=Address, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Address" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="400"></TextBox>
                             <Image Source="\Assets\Images\defaultContact.png" Width="36" Height="36" Opacity=".4"/>
                         </StackPanel>
                     </Grid>
