--- a/Smartshop/Views/LoginView.xaml
+++ b/Smartshop/Views/LoginView.xaml
@@ -3,9 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Smartshop.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="400" d:DesignWidth="400" Height="400">
+             d:DesignHeight="400" d:DesignWidth="400" Height="400" MaxWidth="400" MaxHeight="400">
     <UserControl.Resources>
         <ResourceDictionary Source="\Themes\theme.xaml"/>
     </UserControl.Resources>
@@ -54,15 +53,13 @@
                                 <DropShadowEffect Direction="270" BlurRadius="6" ShadowDepth="3" Opacity="0.8"/>
                             </Button.Effect>
                         </Button>
-                        <Button Content="CANCEL" Margin="4" Width="60" Foreground="{StaticResource PrimaryDarkBrush}" BorderThickness="0">
+                        <Button Content="CANCEL" Margin="4" Width="100" Foreground="{StaticResource PrimaryDarkBrush}" BorderThickness="0">
                             <Button.Effect>
                                 <DropShadowEffect Direction="270" BlurRadius="6" ShadowDepth="3" Opacity="0.8"/>
                             </Button.Effect>
                         </Button>
                     </StackPanel>
                 </StackPanel>
-                
-                
             </Grid>
         </Border>
     </Grid>
