--- a/Smartshop/MainWindow.xaml
+++ b/Smartshop/MainWindow.xaml
@@ -15,6 +15,9 @@
         <DataTemplate x:Name="CustomerViewTemplate" DataType="{x:Type vm:AddNewCustomerViewModel}">
             <v:NewCustomerView/>
         </DataTemplate>
+        <DataTemplate x:Name="InvoiceViewTemplate" DataType="{x:Type vm:InvoiceViewModel}">
+            <v:NewInvoiceView/>
+        </DataTemplate>
     </Window.Resources>
     <DockPanel>
         <!-- Tools -->
@@ -39,11 +42,11 @@
             </Grid>
             <!-- Invoices Button-->
             <Grid Grid.Column="1">
-                <Button Content="Invoices" Background="{StaticResource ResourceKey=AccentLiteBrush}" Margin="1" Command="{Binding LoadLoginViewCommand}"/>
+                <Button Content="Invoices" Background="{StaticResource ResourceKey=AccentLiteBrush}" Margin="1" Command="{Binding LoadNewInvoiceViewCommand}"/>
             </Grid>
             <!-- Inventory Button-->
             <Grid Grid.Column="2">
-                <Button Content="Inventory" Background="{StaticResource ResourceKey=AccentLiteBrush}" Margin="1"/>
+                <Button Content="Inventory" Background="{StaticResource ResourceKey=AccentLiteBrush}" Margin="1" Command="{Binding LoadLoginViewCommand}"/>
             </Grid>
             <TextBlock Grid.Column="7"  Text="{Binding Path=CurDate, Mode=OneWay}" Foreground="{StaticResource MaterialDesignDarkForeground}" FontSize="14" VerticalAlignment="Center" Margin="0 0 0 0"/>
         </Grid>
