more new invoice work

--- a/Smartshop/MainWindow.xaml
+++ b/Smartshop/MainWindow.xaml
@@ -36,20 +36,26 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <!-- Customers Button -->
-            <Grid Grid.Column="0">
-                <Button  Content="Customers" Background="{StaticResource ResourceKey=AccentLiteBrush}" Margin="1" Command="{Binding LoadCustomerViewCommand}"/>
-            </Grid>
-            <!-- Invoices Button-->
-            <Grid Grid.Column="1">
-                <Button Content="Invoices" Background="{StaticResource ResourceKey=AccentLiteBrush}" Margin="1" Command="{Binding LoadNewInvoiceViewCommand}"/>
-            </Grid>
-            <!-- Inventory Button-->
-            <Grid Grid.Column="2">
-                <Button Content="Inventory" Background="{StaticResource ResourceKey=AccentLiteBrush}" Margin="1" Command="{Binding LoadLoginViewCommand}"/>
-            </Grid>
-            <TextBlock Grid.Column="7"  Text="{Binding Path=CurDate, Mode=OneWay}" Foreground="{StaticResource MaterialDesignDarkForeground}" FontSize="14" VerticalAlignment="Center" Margin="0 0 0 0"/>
+                <!-- Customers Button -->
+                <StackPanel Orientation="Horizontal" Grid.ColumnSpan="3" Margin="10 0 0 0">
+                
+            
+                <Grid Grid.Column="0">
+                    <Button  Content="Customers" Background="{StaticResource ResourceKey=AccentLiteBrush}" Margin="1" Command="{Binding LoadCustomerViewCommand}"/>
+                </Grid>
+                <!-- Invoices Button-->
+                <Grid Grid.Column="1">
+                    <Button Content="Invoices" Background="{StaticResource ResourceKey=AccentLiteBrush}" Margin="1" Command="{Binding LoadNewInvoiceViewCommand}"/>
+                </Grid>
+                <!-- Inventory Button-->
+                <Grid Grid.Column="2">
+                    <Button Content="Inventory" Background="{StaticResource ResourceKey=AccentLiteBrush}" Margin="1" Command="{Binding LoadLoginViewCommand}"/>
+                </Grid>
+            </StackPanel>
+            <TextBlock Grid.Column="6" Grid.ColumnSpan="2" Text="{Binding Path=CurDate, Mode=OneWay}" Foreground="{StaticResource MaterialDesignDarkForeground}" FontSize="14" VerticalAlignment="Center" Margin="30 0 0 0"/>
+            
         </Grid>
+       
         <!-- Content -->
         <Grid DockPanel.Dock="Bottom" Background="{StaticResource DarkToLiteBlueBGGradient}" >
             <ContentControl Content="{Binding Path=SelectedViewModel}" Margin="20"/>
