--- a/Smartshop/Views/NewInvoiceView.xaml
+++ b/Smartshop/Views/NewInvoiceView.xaml
@@ -18,7 +18,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="44"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Column="0" Grid.ColumnSpan="4" Background="{StaticResource AccentLiteBrush}">
@@ -30,9 +30,19 @@
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <TextBlock Text="New Invoice" Grid.Column="0"  Grid.Row="0"  HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Margin="10 0 0 0"  Foreground="{StaticResource PrimaryDarkBrush}"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="New Invoice" Grid.Column="0"  Grid.Row="0"  HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Margin="10 0 0 0"  Foreground="{StaticResource PrimaryDarkBrush}"/>
+                    <materialDesign:PackIcon Kind="Post" Height="40" Width="40" Opacity=".6" Margin="20 0 0 0 "/>
+                 
+                </StackPanel>
+                
                 <!--Tool Buttons -->
                 <StackPanel Grid.Column="6" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 2 10 0">
+                    <Button Command="{Binding NewCustomerCommand}" Margin="2">
+                        <Button.Content>
+                            <materialDesign:PackIcon Kind="PersonAdd" Width="26" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Button.Content>
+                    </Button>
                     <Button Command="{Binding SaveInvoiceCommand}" Margin="2">
                         <Button.Content>
                             <Image Source="\Assets\Images\saveIcon.png"/>
@@ -60,7 +70,7 @@
                 </StackPanel>
                 <StackPanel Height="40" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
                     <TextBox Text="{Binding Path=Customer.CompanyName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Customer Name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="200"></TextBox>
-                    <materialDesign:PackIcon Kind="AboutCircle" Width="40" Height="40"  VerticalAlignment="Center"  Opacity=".4"/>
+                    <materialDesign:PackIcon Kind="Person" Width="40" Height="40"  VerticalAlignment="Center"  Opacity=".4"/>
                 </StackPanel>
             </StackPanel>
             <StackPanel Orientation="Vertical" Grid.Column="1"   Margin="0 0" RenderTransformOrigin="0.596,0.502">
@@ -69,7 +79,16 @@
                 </StackPanel>
                 <StackPanel Height="40" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0 -8">
                     <TextBox  Text="{Binding Path=Customer.ContactName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Contact Name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="200"></TextBox>
-                    <materialDesign:PackIcon Kind="AboutCircle" Width="40" Height="40"  VerticalAlignment="Center"  Opacity=".4"/>
+                    <materialDesign:PackIcon Kind="Contacts" Width="40" Height="40"  VerticalAlignment="Center"  Opacity=".4"/>
+                </StackPanel>
+            </StackPanel>
+            <StackPanel Orientation="Vertical" Grid.Column="2"   Margin="0 0" RenderTransformOrigin="0.596,0.502">
+                <StackPanel Height="40" Orientation="Horizontal" HorizontalAlignment="Left" Width="240" Margin="0 4">
+                    <TextBlock Text="{Binding Path=CurDate}" Width="240"  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="14"/>
+                </StackPanel>
+                <StackPanel Height="40" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0 -8">
+                    <TextBox  Text="{Binding Path=Customer.ContactName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Contact Name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="200"></TextBox>
+                    <materialDesign:PackIcon Kind="Contacts" Width="40" Height="40"  VerticalAlignment="Center"  Opacity=".4"/>
                 </StackPanel>
             </StackPanel>
         </Grid>
