--- a/Smartshop/Views/NewInvoiceView.xaml
+++ b/Smartshop/Views/NewInvoiceView.xaml
@@ -19,7 +19,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="44"/>
-            <RowDefinition/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Column="0" Grid.ColumnSpan="4" Background="{StaticResource AccentLiteBrush}">
             <Grid>
@@ -33,9 +33,9 @@
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="New Invoice" Grid.Column="0"  Grid.Row="0"  HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Margin="10 0 0 0"  Foreground="{StaticResource PrimaryDarkBrush}"/>
                     <materialDesign:PackIcon Kind="Post" Height="40" Width="40" Opacity=".6" Margin="20 0 0 0 "/>
-                 
+
                 </StackPanel>
-                
+
                 <!--Tool Buttons -->
                 <StackPanel Grid.Column="6" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 2 10 0">
                     <Button Command="{Binding NewCustomerCommand}" Margin="2">
@@ -56,41 +56,64 @@
                 </StackPanel>
             </Grid>
         </StackPanel>
-    
-        <Grid  Grid.Row="1" Grid.ColumnSpan="4" Background="{StaticResource DarkToLiteBlueBGGradient}">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+
+        <Grid  Grid.Row="1" Grid.ColumnSpan="4"  Background="{StaticResource DarkToLiteBlueBGGradient}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Vertical" Grid.Column="0" Margin="20 0 0 0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Background="{StaticResource AccentLiteBrush}" Height="20" CornerRadius="12" Margin="10,10,10,0">
+                <TextBlock Text="Customer" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="20 0 0 0" Foreground="{StaticResource SecondaryDarkBrush}"/>
+            </Border>
+            <StackPanel Orientation="Vertical" Grid.Column="0" Margin="20 0 0 0" Grid.Row="1">
                 <StackPanel Height="40"   Grid.ColumnSpan="2"   Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
                     <TextBox Text="{Binding Path=InvNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Invoice Number" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="200" IsEnabled="False"></TextBox>
                     <materialDesign:PackIcon Kind="Number0"  Width="40" Height="40" Opacity=".4" VerticalAlignment="Center"/>
                 </StackPanel>
-                <StackPanel Height="40" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
+                <StackPanel Height="40" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="1">
                     <TextBox Text="{Binding Path=Customer.CompanyName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Customer Name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="200"></TextBox>
                     <materialDesign:PackIcon Kind="Person" Width="40" Height="40"  VerticalAlignment="Center"  Opacity=".4"/>
                 </StackPanel>
             </StackPanel>
-            <StackPanel Orientation="Vertical" Grid.Column="1"   Margin="0 0" RenderTransformOrigin="0.596,0.502">
+            <StackPanel Orientation="Vertical" Grid.Column="1"   Margin="0 0" RenderTransformOrigin="0.596,0.502" Grid.Row="1">
                 <StackPanel Height="40" Orientation="Horizontal" HorizontalAlignment="Left" Width="200" Margin="0 4">
-                    <ComboBox  ItemsSource="{Binding Path=Customers, Mode=TwoWay}" DisplayMemberPath="CompanyName" SelectedValuePath="CompanyName" Style="{StaticResource MaterialDesignComboBox}" Width="200"  HorizontalAlignment="Center"></ComboBox>
+                    <ComboBox  ItemsSource="{Binding Path=Customers, Mode=TwoWay}" DisplayMemberPath="CompanyName" SelectedValue="{Binding SelectedCustomer}" SelectedValuePath="CompanyName" Style="{StaticResource MaterialDesignComboBox}" Width="200"  HorizontalAlignment="Center"></ComboBox>
                 </StackPanel>
-                <StackPanel Height="40" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0 -8">
+                <StackPanel Height="40" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0 -8" Grid.Row="1">
                     <TextBox  Text="{Binding Path=Customer.ContactName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Contact Name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="200"></TextBox>
                     <materialDesign:PackIcon Kind="Contacts" Width="40" Height="40"  VerticalAlignment="Center"  Opacity=".4"/>
                 </StackPanel>
             </StackPanel>
-            <StackPanel Orientation="Vertical" Grid.Column="2"   Margin="0 0" RenderTransformOrigin="0.596,0.502">
+            <StackPanel Orientation="Vertical" Grid.Column="2"   Margin="0 0" RenderTransformOrigin="0.596,0.502" Grid.Row="1">
                 <StackPanel Height="40" Orientation="Horizontal" HorizontalAlignment="Left" Width="240" Margin="0 4">
                     <TextBlock Text="{Binding Path=CurDate}" Width="240"  HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="14"/>
                 </StackPanel>
                 <StackPanel Height="40" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0 -8">
-                    <TextBox  Text="{Binding Path=Customer.ContactName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Contact Name" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="200"></TextBox>
-                    <materialDesign:PackIcon Kind="Contacts" Width="40" Height="40"  VerticalAlignment="Center"  Opacity=".4"/>
+                    <TextBox  Text="{Binding Path=Customer.Phone, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Phone #" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="200"></TextBox>
+                    <materialDesign:PackIcon Kind="PhoneSettings" Width="40" Height="40"  VerticalAlignment="Center"  Opacity=".4"/>
                 </StackPanel>
             </StackPanel>
+        </Grid>
+        <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" Margin="0,92,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Border Background="{StaticResource AccentLiteBrush}" CornerRadius="12" Grid.ColumnSpan="4" Height="20" Grid.Row="0" Grid.RowSpan="2" VerticalAlignment="Top" Margin="10 30">
+                <TextBlock Text="Address" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="20 0 0 0" Foreground="{StaticResource SecondaryDarkBrush}"/>
+            </Border>
+
         </Grid>
     </Grid>
 </UserControl>
