--- a/Smartshop/Themes/theme.xaml
+++ b/Smartshop/Themes/theme.xaml
@@ -7,6 +7,7 @@
     <Color x:Key="AccentLite">#BFB6AE</Color>
     <Color x:Key="AccentDark">#A6958F</Color>
     <Color x:Key="PrimaryOrange">#F59B02</Color>
+    <Color x:Key="PrimaryGrey">#444444</Color>
 
     <SolidColorBrush x:Key="PrimaryDarkBrush" Color="{StaticResource Primary}"/>
     <SolidColorBrush x:Key="SecondaryDarkBrush" Color="{StaticResource Secondary}"/>
@@ -14,6 +15,7 @@
     <SolidColorBrush x:Key="AccentLiteBrush" Color="{StaticResource AccentLite}"/>
     <SolidColorBrush x:Key="AccentDarkBrush" Color="{StaticResource AccentLite}"/>
     <SolidColorBrush x:Key="PrimaryOrangeBrush" Color="{StaticResource PrimaryOrange}"/>
+    <SolidColorBrush x:Key="PrimaryGreyBrush" Color="{StaticResource PrimaryGrey}"/>
 
     <LinearGradientBrush x:Key="DarkToLiteBlueGradient" StartPoint="0, 0" EndPoint="1, 1">
         <GradientStop Color="{StaticResource PrimaryLite}" Offset="1.0"/>
