--- a/Smartshop/Views/ViewInvoiceView.xaml
+++ b/Smartshop/Views/ViewInvoiceView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Smartshop.Views.NewInvoiceView"
+﻿<UserControl x:Class="Smartshop.Views.ViewInvoiceView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -32,7 +32,7 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="New Invoice" Grid.Column="0"  Grid.Row="0"  HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Margin="10 0 0 0"  Foreground="{StaticResource PrimaryDarkBrush}"/>
+                    <TextBlock Text="View Invoice" Grid.Column="0"  Grid.Row="0"  HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Margin="10 0 0 0"  Foreground="{StaticResource PrimaryDarkBrush}"/>
                     <materialDesign:PackIcon Kind="Post" Height="40" Width="40" Opacity=".6" Margin="20 0 0 0 "/>
                 </StackPanel>
 
@@ -87,7 +87,7 @@
             <!-- END CUSTOMER HEADER -->
             
             <!-- CUSTOMER DETAILS -->
-            <Grid Grid.Row="1">
+            <Grid Grid.Row="1" Margin="10, 0, 10, 10">
                 <Grid  Margin="10, 0" VerticalAlignment="Top" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="225"/>
@@ -101,9 +101,10 @@
                     </Grid.RowDefinitions>
                     <TextBox Grid.Column="1" Grid.Row="0"
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                             Text="{Binding Customer.CustomerNumber, Mode=OneWay}"
                              materialDesign:HintAssist.Hint="Customer Number"
                              materialDesign:HintAssist.Foreground="{StaticResource AccentLiteBrush}"
-                             Height="50" Width="200" Text="{Binding Customer.CustomerNumber, Mode=OneWay}" IsEnabled="false" 
+                             Height="50" Width="200"  IsEnabled="false" 
                              Margin="4, 0, 0, 4" FontSize="18"
                              VerticalAlignment="Top"/>
                     
@@ -111,7 +112,9 @@
                               Width="200" Height="50"
                               materialDesign:HintAssist.Hint="Customers" 
                               materialDesign:HintAssist.Foreground="{StaticResource AccentLiteBrush}" 
-                              ItemsSource="{Binding Customers}" DisplayMemberPath="CompanyName" SelectedItem="{Binding SelectedCustomer}" 
+                              ItemsSource="{Binding Customers}" 
+                              DisplayMemberPath="CompanyName" 
+                              SelectedItem="{Binding SelectedCustomer}" 
                               Margin="4, 0, 0, 4" FontSize="18"
                               VerticalAlignment="Top"/>
                     
@@ -139,6 +142,14 @@
                              VerticalAlignment="Top"
                              Margin="4, 0, 0, 4" FontSize="18"
                              Text="{Binding SelectedCustomer.Email, Mode=TwoWay}" />
+
+                    <TextBox Grid.Row="1" Grid.Column="3" Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                             materialDesign:HintAssist.Hint="Phone" 
+                             materialDesign:HintAssist.Foreground="{StaticResource AccentLiteBrush}" 
+                             Height="50" Width="200" 
+                             VerticalAlignment="Top"
+                             Margin="4, 0, 0, 4" FontSize="18"
+                             Text="{Binding SelectedCustomer.Phone, Mode=TwoWay}" />
                 </Grid>
             </Grid>
             <!-- END CUSTOMER DETAILS -->
@@ -163,7 +174,7 @@
             
             <!-- ADDRESS DETAILS -->
             <Grid Grid.Row="3" 
-                  Margin="10, 0" 
+                  Margin="10, 0,10, 10" 
                   VerticalAlignment="Top">
 
                 <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
@@ -199,9 +210,8 @@
             <Grid Grid.Row="5">
                 <ScrollViewer Height="400" 
                               VerticalScrollBarVisibility="Visible"
-                              CanContentScroll="True"
-                              
-                              >
+                              CanContentScroll="True">
+                    
                     <Grid Height="Auto">
                         <Grid.RowDefinitions>
                             <RowDefinition/>
@@ -210,33 +220,59 @@
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <StackPanel Orientation="Vertical">
+                            <!-- ROW 1 -->
                             <StackPanel Orientation="Horizontal">
+                                <ComboBox  Grid.Row="0"
+                                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                                     ItemsSource="{Binding Customer.Invoices}"
+                                     DisplayMemberPath="InvoiceNumber" 
+                                     SelectedItem="{Binding SelectedInvoice}" 
+                                     materialDesign:HintAssist.Hint="Invoices"
+                                     materialDesign:HintAssist.Foreground="{StaticResource PrimaryGreyBrush}"
+                                     Foreground="{StaticResource AccentLiteBrush}"
+                                     Height="50" Width="200"  
+                                     IsEnabled="True" 
+                                     Margin="20, 10, 0, 4" FontSize="18"
+                                     VerticalAlignment="Top"/>
                                 <TextBox  Grid.Row="0"
-                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                             materialDesign:HintAssist.Hint="Invoice Number"
-                             materialDesign:HintAssist.Foreground="{StaticResource AccentLiteBrush}"
-                             Height="50" Width="200"  
-                             IsEnabled="false" 
-                             Margin="20, 10, 0, 4" FontSize="18"
-                             VerticalAlignment="Top"/>
+                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                                     Text="{Binding SelectedInvoice.InvoiceNumber}"
+                                     materialDesign:HintAssist.Hint="Invoice Number"
+                                     materialDesign:HintAssist.Foreground="{StaticResource PrimaryGreyBrush}"
+                                     Foreground="{StaticResource AccentLiteBrush}"
+                                     Height="50" Width="200"  
+                                     Margin="20, 10, 0, 4" FontSize="18"
+                                     VerticalAlignment="Top"/>
+                                
+                                <TextBox  Grid.Row="0"
+                                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                                     Text="{Binding SelectedCustomer.CompanyName}"
+                                     materialDesign:HintAssist.Hint="Customer Name"
+                                     materialDesign:HintAssist.Foreground="{StaticResource PrimaryGreyBrush}"
+                                     Foreground="{StaticResource AccentLiteBrush}"
+                                     Height="50" Width="200"  
+                                     Margin="20, 10, 0, 4" FontSize="18"
+                                     VerticalAlignment="Top"/>
 
                             </StackPanel>
+                            <!-- END ROW 1 -->
                                 <StackPanel Orientation="Horizontal">
                                     <TextBox  Grid.Row="0"
-                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                                 materialDesign:HintAssist.Hint="Invoice Number"
-                                 materialDesign:HintAssist.Foreground="{StaticResource AccentLiteBrush}"
-                                 Height="50" Width="200"  
-                                 IsEnabled="false" 
-                                 Margin="20, 10, 0, 4" FontSize="18"
-                                 VerticalAlignment="Top"/>
+                                        Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                                        Text="{Binding SelectedInvoice.DueDate}"
+                                        materialDesign:HintAssist.Hint="Due Date"
+                                        materialDesign:HintAssist.Foreground="{StaticResource PrimaryGreyBrush}"
+                                        Foreground="{StaticResource AccentLiteBrush}"
+                                        Height="50" Width="200"  
+                                        Margin="20, 10, 0, 4" FontSize="18"
+                                        VerticalAlignment="Top"/>
 
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBox  Grid.Row="0"
                                  Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                                  materialDesign:HintAssist.Hint="Invoice Number"
-                                 materialDesign:HintAssist.Foreground="{StaticResource AccentLiteBrush}"
+                                 materialDesign:HintAssist.Foreground="{StaticResource PrimaryGreyBrush}"
                                  Height="50" Width="200"  
                                  IsEnabled="false" 
                                  Margin="20, 10, 0, 4" FontSize="18"
